Create test for start and end dates

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -4,7 +4,7 @@
     <title>Vue1</title>
 </head>
 <body>
-    <h1>Harvest Report</h1>
+    <h1 data-cy="page-header">Harvest Report</h1>
     <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
 
     <div id="report" v-cloak>
@@ -13,9 +13,9 @@
         <br>
         <br>
         <label for="start-date">Start:</label>
-        <input type="date" id="start-date" name="start-date" :min="reportStartDate" :max="reportEndDate" v-model="reportStartDate" />
+        <input data-cy="start-date" type="date" id="start-date" name="start-date" :min="reportStartDate" :max="reportEndDate" v-model="reportStartDate"/>
         <label for="end-date">End:</label>
-        <input type="date" id="end-date" name="end-date" :min="reportStartDate" max="reportEndDate" v-model="reportEndDate" />
+        <input data-cy="end-date" type="date" id="end-date" name="end-date" :min="reportStartDate" max="reportEndDate" v-model="reportEndDate"/>
         <br>
         <br>
         <label for="crop">Crop:</label>
@@ -72,8 +72,8 @@
             el: "#report",
             data: {
                 reportTitle: "My Sample Harvest Report",
-                reportStartDate: "05/05/2020",
-                reportEndDate: "05/15/2020",
+                reportStartDate: "2020-05-05",
+                reportEndDate: "2020-05-15",
                 reportCrop: "All",
                 reportArea: "All",
                 harvestLogs: [],
