--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -23,7 +23,7 @@
             <option v-for="crop in cropNames">{{ crop }}</option>
         </select>
         <label for="field">Area:</label>
-        <select id="field" name="field" v-model="reportArea">
+        <select id="field" name="field" v-model="reportArea" data-cy="area">
             <option v-for="area in areaNames">{{ area }}</option>
         </select>
         <br>
