--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -10,7 +10,8 @@
             <h1 data-cy="page-header">Harvest Report</h1>
             <p>This page is a <i>mockup</i> simplified harvest report</p>
             <p>
-            <label for="title">Title:</label>
+                <label for="title">Title:</label>
+                <input type="text" id="reportTitle" value="My Sample Harvest Report" v-model="reportTitle" />
             </p>
             <p>
             <label for="start">Start:</label>
@@ -46,7 +47,8 @@
             </p>
             <input data-cy="generate-report-button" type="button" value="Generate Report" @click="generateReportButton"/>
             <hr>
-            <h1 data-cy="report-title">{{reportTitle ? reportTitle: "Mock Harvest Report"}}</h1>
+            <!-- <h1 data-cy="report-title">{{reportTitle==""?"Mock Harvest Report":reportTitle}}</h1>  -->
+            <h1 data-cy="report-title" v-if="showReportTitle">{{ reportTitle ? reportTitle : 'Mock Harvest Report' }}</h1>
             <p>Details:</p>
             <ul>
                 <li><strong>Farm:</strong>{{Farm}}</li>
@@ -87,10 +89,11 @@
             var vueDate = new Vue({
                 el:'#report-title',
                 data: {
+                    showReportTitle: false,
                     Farm:"",
                     User:"",
                     Language:"",
-                    reportTitle: 'My Sample Harvest Report',
+                    reportTitle:"",
                     reportStartDate: '2020-05-05',
                     reportEndDate: '2020-05-15',
                     reportCrop: 'All',
@@ -145,6 +148,7 @@
 
                 methods: { 
                     generateReportButton: function (){
+                        this.showReportTitle = true;
                         let timestampStart = dayjs(this.reportStartDate).unix() 
                         let timestampEnd = dayjs(this.reportEndDate).unix()
                         console.log(timestampStart)
