added test for crop drop down

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -14,7 +14,7 @@
         <br/>
 
         <label for="crop">Crop:</label>
-        <select id="crop" name="crop" v-model="reportCrop">
+        <select data-cy="crop-dropdown" id="crop" name="crop" v-model="reportCrop">
             <option v-for="crop in cropNames"> {{crop}} </option>
         </select>
 
