--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -24,11 +24,11 @@
         </select>
         <br/>
 
-        <button type="button" @click='generateReport'>Generate Report</button>
+        <button data-cy="generate-report-button" type="button" @click='generateReport'>Generate Report</button>
         <hr/>
 
 
-        <h1>{{ reportTitle ? reportTitle : 'Mock Harvest Report' }}</h1>
+        <h1 data-cy="report-title">{{ reportTitle ? reportTitle : 'Mock Harvest Report' }}</h1>
 
         <p>Details: </p>
         <ul>
