Create test to check that title of harvest report is bound to input

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -9,7 +9,7 @@
 
     <div id="report" v-cloak>
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" v-model="reportTitle"/>
+        <input type="text" id="title" name="title" v-model="reportTitle" data-cy="title"/>
         <br>
         <br>
         <label for="start-date">Start:</label>
