Create test to check that a message is displayed if no logs are available

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -64,7 +64,7 @@
                 <td><button type="button" @click="deleteRow">Delete</button></td>
             </tr>
         </table>
-        <p v-if="harvestReportRows.length === 0">There are no matching records!</p>
+        <p v-if="harvestReportRows.length === 0" data-cy="no-record-message">There are no matching records!</p>
     </div>
 
     <script>
