made small changes to Vue2

--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -20,7 +20,7 @@
 </select> <br />
 <br />
 
-<button type="button">Generate Report</button>
+<button type="button"@click="items.push(newItem)">Generate Report</button>
 <hr />
 <h1>{{ header ? header : 'Mock Harvest Report' }}</h1>
 <p>Details: </p>
