--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -32,9 +32,9 @@
 
         <p>Details: </p>
         <ul>
-            <li><strong>Farm:</strong>{{ farm }}</li>
-            <li><strong>User:</strong>{{ user }}</li>
-            <li><strong>Language:</strong>{{ language }}</li>
+            <li><strong>Farm:</strong><span data-cy="farm-name">{{ farm }}</span></li>
+            <li data-cy="user-name"><strong>User:</strong>{{ user }}</li>
+            <li><strong>Language:</strong><span data-cy="language">{{ language }}</span></li>
             <br/>
             <li><strong>Start:</strong>{{ reportStartDate }}</li>
             <li><strong>End:</strong>{{ reportEndDate }}</li>
