--- a/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/fd2/fd2.html
@@ -48,25 +48,13 @@
                     </ul>
                 </p>
                 <br>
-                <p v-if="harvestReportRows.length === 0">No Harvest Report Records Match</p>
-                <table border="1" v-if="harvestReportRows.length > 0">
-                    <tr>
-                        <th><strong>Row</strong></th>
-                        <th><strong>Date</strong></th>
-                        <th><strong>Area</strong></th>
-                        <th><strong>Crop</strong></th>
-                        <th><strong>Yield</strong></th>
-                        <th><strong>Units</strong></th>
-                    </tr>
-                    <tr v-for="(row,index) in harvestReportRows">
-                        <td>{{ index + 1}}</td>
-                        <td>{{ row.date }}</td>
-                        <td>{{ row.area }}</td>
-                        <td>{{ row.crop }}</td>
-                        <td>{{ row.yield }}</td>
-                        <td>{{ row.units }}</td>
-                    </tr>
-                </table>
+
+                <custom-table data-cy="custom-table"
+                    :columns="customTableColumns"
+                    :rows="customTableRows"
+                >
+                </custom-table>
+
             </body>
     </div>
     <script>
@@ -84,6 +72,7 @@
             el: '#sample-report',
             components: {
                 'dropdown-with-all': DropdownWithAllComponent,
+                'custom-table': CustomTableComponent,
             },
             data: {
                 title: '',
@@ -93,6 +82,9 @@
                 startDate: '2020-05-05',
                 endDate: '2020-05-15',
                 crop: 'All',
+                crops: [
+
+                ],
                 idToCropMap: new Map(),
                 area: 'All',
                 areas: [
@@ -100,41 +92,48 @@
                     'Chuau-1',
                     'SQ7'
                 ],
-                newLog: {},
-                harvestLogs: [
+                newLog: {
+
+                },
+                harvestLog: [
+
                 ],
                 allHarvestLogs: [
 
                 ],
+                customTableColumns: [
+                    {"header": 'Date', "visible": true, "inputType": {'type': 'no input'}},
+                    {"header": 'Area', "visible": true, "inputType": {'type': 'no input'}},
+                    {"header": 'Crop', "visible": true, "inputType": {'type': 'no input'}},
+                    {"header": 'Units', "visible": true, "inputType": {'type': 'no input'}},
+                    {"header": 'Yield', "visible": true, "inputType": {'type': 'no input'}},
+                ],
             },
             computed: {
-                cropNames () {
-                    return Array.from(this.idToCropMap.values());
-                },
-                harvestReportRows() {
-                let tableRows = []
-                    for(let log of this.allHarvestLogs) { 
-                        if(this.idToCropMap.get(log.data.crop_tid) === this.crop) {   
-                            let tableRow = {
-                                date: dayjs.unix(log.timestamp).format('MM/DD/YYYY'),
-                                area: log.area[0].name,
-                                yield: log.quantity[0].value,
-                                units: log.quantity[0].unit.name,
-                                crop: this.idToCropMap.get(log.data.crop_tid)
+                customTableRows() {
+                    let rows = []
+                    for(let log of this.allHarvestLogs) {
+                        let row = {
+                                id: log.data.crop_tid,
+                                data: [
+                                    dayjs.unix(log.timestamp).format('MM/DD/YYYY'),
+                                    log.area[0].name,
+                                    this.idToCropMap.get(log.data.crop_tid),
+                                    log.quantity[0].unit.name,
+                                    log.quantity[0].value, 
+                                ]  
                             }
-                            tableRows.push(tableRow)
-                        } else if (this.crop === "All") {
-                            let tableRow = {
-                                date: dayjs.unix(log.timestamp).format('MM/DD/YYYY'),
-                                area: log.area[0].name,
-                                yield: log.quantity[0].value,
-                                units: log.quantity[0].unit.name,
-                                crop: this.idToCropMap.get(log.data.crop_tid)
-                            }
-                            tableRows.push(tableRow)
+                        if(row.data[2] === this.crop) {
+                            rows.push(row)
+                        } else if(this.crop === "All") {
+                            rows.push(row)
                         }
                     }
-                    return tableRows
+                    return rows
+                }, 
+                cropNames () {
+                    crops = Array.from(this.idToCropMap.values());
+                    return Array.from(this.idToCropMap.values());
                 },
             },
             methods: {
